--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
+        android:typeface="@font/lolkek"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
